# alpha-engine

./: .env.example  .gitignore  FOLLOWUPS.md  README.md  pyproject.toml
alpha_engine/: __init__.py
alpha_engine/analysis/: __init__.py  holistic.py  reco_tracker.py
alpha_engine/backtest/: __init__.py  advisors.py  costs.py  engine.py  eras.py  (+6 more)
config/: channels.yaml  geopolitical.yaml  settings.yaml  universe.yaml
dashboard/: app.py  glossary.py  queries.py
data/: _test_log.txt  ml_validation.json
scripts/: backfill.py  backfill_holdings.py  backfill_resume.py  backfill_sp500.py  backtest.py  backtest_llm.py  backup_db.ps1  classify_regimes.py  cleanup_paper_state.py  compare_models.py  compare_strategies.py  daily_paper_trade.bat  dashboard.bat  dashboard_remote.bat  debug_backtest.py  debug_signal_dupes.py  dedup_paper_trades.py  generate_llm_history.py  ingest_gdelt.py  ingest_gdelt_bq.py  inspect_calendar.py  inspect_regimes.py  inspect_signals.py  inspect_snapshot.py  measure_entry_timing.py  morning_brief.py  paper_trader.py  post_run_check.ps1  record_recommendations.py  refresh_earnings.py  refresh_phaseC.bat  run_book_digest.py  run_digest.py  run_ml_signals.py  seed_calendars.py  validate_ml.py  verify_setup.py  walkforward.py  write_holdings.py
tests/: test_entry_timing.py  test_feedback_eval.py  test_forward_eval.py  test_gdelt_bigquery.py  test_holistic.py  test_llm_feedback.py  test_ml_advisor_store.py  test_ml_features.py  test_ml_model.py  test_model_ab.py  test_portfolio_risk.py  test_reco_tracker.py  test_ta_snapshot.py  test_trade_plan.py
(+57 files in other folders)
